--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "url": "git+https://github.com/leshy/statemachine.git"
   },
   "dependencies": {
-    "backbone4000": "git://github.com/leshy/backbone4000.git"
+    "backbone4000": "git://github.com/leshy/backbone4000.git",
+    "subscriptionman2": "git://github.com/leshy/nodejs-subscriptionman2.git"
   },
   "keywords": [],
   "author": "lesh <lesh@sysphere.org> (http://lesh.sysphere.org)",
